fixing white gap , making better responsiveness

--- a/public/home.css
+++ b/public/home.css
@@ -12,10 +12,21 @@
   font-family: "Google Sans", sans-serif;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
   color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    font-size: 1.2rem;
+  }
 }
 
 nav {
@@ -335,6 +346,13 @@ nav ul li a {
   box-shadow: -2px 0 20px rgba(0, 0, 0, 0.1);
   border-left: solid 1px white;
   transition: all 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  .cartContainer {
+    width: 100%;
+    border: none;
+  }
 }
 
 .cartTitle {
